keyboard: Always try to activate the ibus daemon

We set XMODIFIERS=@im=ibus globally at session start so that XIM
clients can immediately benefit from IBus input sources when/if the
user adds one. Unfortunately, these clients then won't work correctly
in case we don't actually activate the ibus daemon. E.g. dead keys
don't work in this case.

Also, previously we'd try to set an "xkb:..." ibus engine according to
the XKB layout. It happens that this wouldn't work for most layouts
since there isn't an ibus engine for each layout and it's actually not
needed since all of those "xkb:..." engines work the same way despite
having different names.

As such we'll always try to activate the daemon even if none of the
user's current input sources need it and set one of the trivial "echo"
engines so that XIM clients work correctly.

https://bugzilla.gnome.org/show_bug.cgi?id=695867