plugins/keyboard/gsd-keyboard-manager.c
@@ -103,7 +103,6 @@ struct GsdKeyboardManagerPrivate
 #ifdef HAVE_IBUS
         IBusBus   *ibus;
         GHashTable *ibus_engines;
-        GHashTable *ibus_xkb_engines;
         GCancellable *ibus_cancellable;
 #endif
         gint       xkb_event_base;
@@ -173,47 +172,7 @@ clear_ibus (GsdKeyboardManager *manager)
         g_cancellable_cancel (priv->ibus_cancellable);
         g_clear_object (&priv->ibus_cancellable);
         g_clear_pointer (&priv->ibus_engines, g_hash_table_destroy);
-        g_clear_pointer (&priv->ibus_xkb_engines, g_hash_table_destroy);
         g_clear_object (&priv->ibus);
-}
-
-static gchar *
-make_xkb_source_id (const gchar *engine_id)
-{
-        gchar *id;
-        gchar *p;
-        gint n_colons = 0;
-
-        /* engine_id is like "xkb:layout:variant:lang" where
-         * 'variant' and 'lang' might be empty */
-
-        engine_id += 4;
-
-        for (p = (gchar *)engine_id; *p; ++p)
-                if (*p == ':')
-                        if (++n_colons == 2)
-                                break;
-        if (!*p)
-                return NULL;
-
-        id = g_strndup (engine_id, p - engine_id + 1);
-
-        id[p - engine_id] = '\0';
-
-        /* id is "layout:variant" where 'variant' might be empty */
-
-        for (p = id; *p; ++p)
-                if (*p == ':') {
-                        if (*(p + 1) == '\0')
-                                *p = '\0';
-                        else
-                                *p = '+';
-                        break;
-                }
-
-        /* id is "layout+variant" or "layout" */
-
-        return id;
 }
 
 static void
@@ -244,22 +203,12 @@ fetch_ibus_engines_result (GObject            *object,
 
         /* Maps IBus engine ids to engine description objects */
         priv->ibus_engines = g_hash_table_new_full (g_str_hash, g_str_equal, NULL, g_object_unref);
-        /* Maps XKB source id strings to engine description objects */
-        priv->ibus_xkb_engines = g_hash_table_new_full (g_str_hash, g_str_equal, g_free, NULL);
 
         for (l = list; l; l = l->next) {
                 IBusEngineDesc *engine = l->data;
                 const gchar *engine_id = ibus_engine_desc_get_name (engine);
 
                 g_hash_table_replace (priv->ibus_engines, (gpointer)engine_id, engine);
-
-                if (strncmp ("xkb:", engine_id, 4) == 0) {
-                        gchar *xkb_source_id = make_xkb_source_id (engine_id);
-                        if (xkb_source_id)
-                                g_hash_table_replace (priv->ibus_xkb_engines,
-                                                      xkb_source_id,
-                                                      engine);
-                }
         }
         g_list_free (list);
 
@@ -285,23 +234,8 @@ fetch_ibus_engines (GsdKeyboardManager *manager)
 }
 
 static void
-maybe_start_ibus (GsdKeyboardManager *manager,
-                  GVariant           *sources)
+maybe_start_ibus (GsdKeyboardManager *manager)
 {
-        gboolean need_ibus = FALSE;
-        GVariantIter iter;
-        const gchar *type;
-
-        g_variant_iter_init (&iter, sources);
-        while (g_variant_iter_next (&iter, "(&s&s)", &type, NULL))
-                if (g_str_equal (type, INPUT_SOURCE_TYPE_IBUS)) {
-                        need_ibus = TRUE;
-                        break;
-                }
-
-        if (!need_ibus)
-                return;
-
         if (!manager->priv->ibus) {
                 ibus_init ();
                 manager->priv->ibus = ibus_bus_new_async ();
@@ -364,16 +298,21 @@ set_ibus_engine (GsdKeyboardManager *manager,
 }
 
 static void
-set_ibus_xkb_engine (GsdKeyboardManager *manager,
-                     const gchar        *xkb_id)
+set_ibus_xkb_engine (GsdKeyboardManager *manager)
 {
         IBusEngineDesc *engine;
         GsdKeyboardManagerPrivate *priv = manager->priv;
 
-        if (!priv->ibus_xkb_engines)
+        if (!priv->ibus_engines)
                 return;
 
-        engine = g_hash_table_lookup (priv->ibus_xkb_engines, xkb_id);
+        /* All the "xkb:..." IBus engines simply "echo" back symbols,
+           despite their naming implying differently, so we always set
+           one in order for XIM applications to work given that we set
+           XMODIFIERS=@im=ibus in the first place so that they can
+           work without restarting when/if the user adds an IBus
+           input source. */
+        engine = g_hash_table_lookup (priv->ibus_engines, "xkb:us::eng");
         if (!engine)
                 return;
 
@@ -1011,7 +950,7 @@ apply_input_sources_settings (GSettings          *settings,
         }
 
 #ifdef HAVE_IBUS
-        maybe_start_ibus (manager, sources);
+        maybe_start_ibus (manager);
 #endif
 
         g_variant_get_child (sources, current, "(&s&s)", &type, &id);
@@ -1029,7 +968,7 @@ apply_input_sources_settings (GSettings          *settings,
                 }
                 set_gtk_im_module (manager, GTK_IM_MODULE_SIMPLE);
 #ifdef HAVE_IBUS
-                set_ibus_xkb_engine (manager, id);
+                set_ibus_xkb_engine (manager);
 #endif
         } else if (g_str_equal (type, INPUT_SOURCE_TYPE_IBUS)) {
 #ifdef HAVE_IBUS
